--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.4.0",
+    "gravatar": "^1.8.0",
+    "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.11",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "validator": "^10.11.0"
   }
 }
