--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
-    "react-router-dom": "^4.4.0",
+    "react-router-dom": "*",
     "react-scripts": "2.1.8",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.1",
